--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-transition-group": "^2.5.1",
     "redux": "^4.0.1"
   },
   "scripts": {
